src/objects/Project_Team__c.object
<CustomObject>
    <fields>
        <fullName>Billable_Rate__c</fullName>
        <label>Billable Rate (Per Hour)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <globalPicklist>Capacity</globalPicklist>
        <label>Capacity</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Rate__c</fullName>
        <label>Cost Rate (Per Hour)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>User__r.Profile.Name</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Person Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>